--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shu School - Премиальная платформа для изучения разработки игр</title>
-    <meta name="description" content="Элитное образование в сфере разработки игр с ведущими экспертами индустрии" />
+    <title>Shu School - платформа для изучения разработки игр</title>
+    <meta name="description" content="Онлайн образование в сфере разработки игр с ведущими экспертами индустрии" />
     <meta name="author" content="Shu School" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
